# ClinFly

./: .gitignore  Dockerfile  README.md  clinfly_app.py  clinfly_app_cli.py  clinfly_app_st.py  lf_app.py  packages.txt  pyproject.toml  requirements.txt
clinphen_src/: get_phenotypes_lf.py
clinphen_src/data/: hpo_synonym_filter.txt  hpo_synonyms.txt  hpo_term_names.txt
data/: drug_name.tsv  exception_list_anonymization.tsv  fr_abbreviations.json  fr_abbreviations_translation.json  gene_name.tsv  hp_fr_en_translated_marian_review_lwg.json  proper_noun_location_sort.csv  test.tsv  test_pdf.tsv
utilities/: anonymize.py  convert.py  extract_hpo.py  get_model.py  translate.py  web_utilities.py
