[tool.poetry]
name = "linguo_franca"
version = "0.1.0"
description = ""
authors = ["kyauy <kevin.yauy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
pyhpo = "^3.1.3"
clinphen = "^1.28"
argostranslate = "^1.8.0"
transformers = "^4.26.1"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
