[tool.poetry]
name = "linguo_franca"
version = "0.1.0"
description = ""
authors = ["kyauy <kevin.yauy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12, !=3.9.7"
pyhpo = "^3.1.3"
argostranslate = "^1.8.0"
transformers = "^4.26.1"
protobuf = "3.20.*"
nltk = "^3.8.1"
six = "^1.16.0"
pandas = "^1.5.3"
spacy = "^3.5.0"
presidio-analyzer = "^2.2.32"
presidio-anonymizer = "^2.2.32"
streamlit = "^1.20.0"
memory-profiler = "^0.61.0"
Unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
